# workrave

./: README.md
docs/: macos.md
tools/local/: macos-qt-build.sh
ui/app/: Application.hh  ApplicationMacOS.cc  ApplicationMacOS.hh  CMakeLists.txt
ui/app/test/: ApplicationMacOSTest.cc  CMakeLists.txt
ui/app/toolkits/qt/: CMakeLists.txt  ToolkitMenu.cc
